# AviCore

./: .gitignore  Cargo.toml  NET_MAP.md  README.md  SECURITY.md  TODO.md  bacon.toml  test-event.json
.cargo/: config.toml
.github/workflows/: Release.yml  docs.yml  pr.yml  release.yml
chat/: Cargo.toml
chat/src/: commands.rs  main.rs
config/: settings.config
config/config/: settings.config
config/lang/: en.lang  pt.lang
config/site/src/: skill.tsx
config/site/src/skill/: Overview.jsx  SettingsPage.jsx  Skill.jsx  skill_input.css
config/skills/saudation/: main.avi  manifest.yaml  test.avi
config/skills/saudation/config/: settings.config
config/skills/saudation/intent/entities/: timeOfDay.entity
config/skills/saudation/intent/intents/: saudation@hi.intent
docs/: 1-glossary.mdx  array.md  constant.md  constant.mdx  context.md  context.mdx  dialogue.md  dialogue.mdx  fs.md  fs.mdx  global.md  global.mdx  json.md  json.mdx  locale.md  locale.mdx  log.md  log.mdx  ml.md  rand.md  settings.md  settings.mdx  skill.md  skill.mdx  slots.md  slots.mdx  url.md  user.md  user.mdx  util.md  util.mdx
dsl-config/: avi.configuration.json  avi.markdown.json  avi.tmLanguage.json  package.json
examples/: chat.rs  domain.rs  message_types.rs  session.rs
f/config/: settings.config
skills/: skills path
skills/LightControl/: main.avi  manifest.json
skills/LightControl/config/: settings.yaml
skills/LightControl/intents/: light_on.json
skills/LightControl/responses/: pt.lang
skills/saudation/: main.avi  manifest.json  manifest.yaml  test.avi
skills/saudation/config/: const.config  const.yaml  settings.yaml
skills/saudation/entity/: timeOfDay.yaml
skills/saudation/intent/intents/: saudation@hi.intent
skills/saudation/intents/: saudation@hi.yaml
skills/saudation/responses/: en.lang  en.yaml  pt.lang  pt.yaml
src/: api.rs  cli_args.rs  config.rs  context.rs  ctx.rs  intent.rs  languages.rs  log.rs  macros.rs  main.rs  setup.rs  start.rs  ui.rs  user.rs  utils.rs
src/actions/: action.rs  dialogue.rs  intent.rs  mesh.rs  mod.rs
src/api/: api.rs  mod.rs  response.rs  send.rs
src/cli/: args.rs  mod.rs  setup.rs  ui.rs
src/content/: getters.rs  lang.rs  mod.rs  skill.rs
src/context/: context.rs
src/data/: mod.rs
src/dialogue/: intent.rs  lang_parse.rs  languages.rs  mod.rs  reply.rs  response.rs  utils.rs
src/intent/: classifier.rs  mod.rs
src/skills/: config.rs  fallback.rs  manager.rs  mod.rs  skill.rs  skill_context.rs
src/skills/avi_script/: avi_engine.rs  avi_librarymanager.rs  engine.rs  helpers.rs  mod.rs  modules.rs  package.rs
src/skills/avi_script/functions/: json.rs  mod.rs
src/skills/avi_script/module/: constant.rs  context.rs  dialogue.rs  fs.rs  json.rs  locale.rs  log.rs  ml.rs  mod.rs  rand.rs  settings.rs  skill.rs  slots.rs  urls.rs  user.rs  util.rs
src/skills/avi_script/syntax/: mod.rs  on_end.rs  on_intent.rs  on_start.rs  operators.rs  subscribe.rs
src/skills/dsl/: array.rs  avi_dsl.rs  color.rs  constants.rs  context.rs  crypto.rs  dialogue.rs  dyon_helpers.rs  fs.rs  intent.rs  json.rs  lib.avi  linear.rs  link.rs  locales.rs  log.rs  manifest.rs  math.rs  mod.rs  object.rs  settings.rs  skill.rs  std.rs  string.rs  thread.rs  time.rs  user.rs  utils.rs
