[package]
name = "AviCore"
version = "0.8.6"
edition = "2024"


[features]
docs = ["rhai-autodocs"]

[dependencies]
reqwest = { version = "0.12.24", features = ["json", "default-tls"] }
tokio = { version = "1.35", features = ["full"] }
serde_json = "1.0.147"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
strfmt = "0.2"
rand = "0.9.2"
parking_lot = "0.12"
chrono = "0.4.42"
avi_device = { package = "avi-device", git = "https://github.com/apoll011/avi-device" }
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
notify-debouncer-mini = "0.7.0"
log = { version = "0.4.29", features = ["std"] }
colored = "3.0.0"
dirs = "6.0.0"
rhai = { version = "1.23.6", features = ["debugging", "decimal", "serde", "sync", "metadata"] }
rhai-autodocs = { version = "0.10.0", optional = true }
clap = { version = "4.5.54", features = ["derive"] }

[dev-dependencies]
async-trait = "0.1.89"
avi-p2p = { git = "https://github.com/apoll011/avi-device" }
tempfile = "3.24.0"
