[package]
name = "AviCore"
version = "2.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["json", "default-tls"] }
tokio = { version = "1.35", features = ["full"] }
serde_json = "1.0.147"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
strfmt = "0.2"
rand = "0.9.2"
parking_lot = "0.12"
chrono = { version = "0.4.42", features = ["serde"] }
avi_device = { package = "avi-device", git = "https://github.com/apoll011/avi-device" }
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
notify-debouncer-mini = "0.7.0"
log = { version = "0.4.29", features = ["std"] }
colored = "3.0.0"
dirs = "6.0.0"
rhai = { version = "1.23.6", features = ["debugging", "decimal", "serde", "sync", "metadata"] }
rhai-autodocs = { version = "0.10.0" }
clap = { version = "4.5.54", features = ["derive"] }
regex = "1.12.2"
url = "2.5.8"
smartcorelib = { version = ">=0.3.0", package = "smartcore", features = ["serde"] }
bincode = "1.3.3"
console = "0.15"
indicatif = "0.17"
inquire = "0.7"
termimad = "0.30"
memory_size = { git = "https://github.com/apoll011/memory_size", package = "memory_size" }
memory_size_derive = { git = "https://github.com/apoll011/memory_size", package = "memory_size_derive" }

[dev-dependencies]
async-trait = "0.1.89"
avi-p2p = { git = "https://github.com/apoll011/avi-device" }
tempfile = "3.24.0"
